packages/kit/test/apps/basics/src/routes/errors/endpoint-throw-error/+server.js
import { error } from '@tg-svelte/kit';

export function GET() {
	error(401, 'You shall not pass');
}
